tests/error/misc_errors/load_error.err
Error: Type mismatch (at $FILE:10:11)
   | 
 8 | @guppy(module1)
 9 | def foo(x: float) -> int:
10 |     return x
   |            ^ Expected return value of type `int`, got `float`

Guppy compilation failed due to 1 previous error
